--- a/views/forgot/reset.ejs
+++ b/views/forgot/reset.ejs
@@ -1,30 +1,39 @@
 <%- include ('../partials/header') %>
 
-<h1>Reset Password</h1>
-<form action="/auth/reset/<%= token %>" method="post">
-  <div class="form-group">
-    <label for="password">New Password</label>
-    <input
-      type="password"
-      name="password"
-      class="form-control"
-      placeholder="******"
-      minlength="6"
-    />
-  </div>
+<div class="inner">
+  <h1 class="heading-secondary">Reset Password</h1>
+  <form class="card" method="POST">
+    <div class="form-group">
+      <label class="form__label" for="password">New Password</label>
+      <input
+        id="password"
+        type="password"
+        name="password"
+        class="form__input"
+        placeholder="********"
+        minlength="8"
+        required
+        autofocus
+      />
+    </div>
 
-  <div class="form-group">
-    <label for="confirm">Confirm</label>
-    <input
-      type="password"
-      name="confirm"
-      class="form-control"
-      placeholder="******"
-      minlength="6"
-    />
-  </div>
+    <div class="form-group">
+      <label for="confirm">Confirm Password</label>
+      <input
+        id="confirm"
+        type="password"
+        name="confirm"
+        class="form__input"
+        placeholder="********"
+        minlength="8"
+        required
+      />
+    </div>
 
-  <button type="submit" class="btn btn-default">Save</button>
-</form>
+    <button type="submit" class="btn btn--green btn--small btn-block">
+      Reset →
+    </button>
+  </form>
+</div>
 
 <%- include ('../partials/footer') %>
