--- a/views/genres/add.ejs
+++ b/views/genres/add.ejs
@@ -1,14 +1,16 @@
 <%- include ('../partials/header') %>
 
-<h1>Add Genre</h1>
-<form action="/genres/add" method="post">
-    <div class="form-group">
-        <label for="name">Name</label>
-        <input type="text" name="name" class="form-control" placeholder="Genre Name">
-    </div>
-
-    <button type="submit" class="btn btn-default">Submit</button>
-    <a href="/genres" class="btn btn-danger">Close</a>
-</form>
+<div class="inner">
+    <h1 class="heading-secondary">Add Genre</h1>
+    <form class="card" action="/genres/add" method="POST">
+        <div class="form-group">
+            <label class="form__label" for="name">Name</label>
+            <input id="name" type="text" name="name" class="form__input" placeholder="Genre Name" autofocus required />
+        </div>
+    
+        <button type="submit" class="btn btn--green btn--small">Submit →</button>
+        <a href="/genres" class="btn btn--small btn-danger">Close</a>
+    </form>
+</div>
 
 <%- include ('../partials/footer') %>
