--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -7,7 +7,8 @@
         </div>
 
         <footer class="footer">
-            <p class="text-center">Albumz &copy; 2020, All Rights Reserved</p>
+            <% const year = new Date(); %>
+            <p class="text-center">Albumz &copy; <%= year.getFullYear(); %>, All Rights Reserved | Design by Emmanuel Adebayo&trade;</p>
         </footer>
     </body>
 </html>
